--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" integrity="sha512-vYpn4GhMVU8fLZQPPyy9mmdCiGXABwNRiFKKZ/gnVl3xG3r3K/5FLELf9YYN9L5l5PqL8KwXwZN5l/c06I4mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
   <script src="js/vanta-init.js"></script>
   <script src="js/main.js"></script>
