--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
     </div>
   </div>
 
+  <script>
+  // Redirect from root to index.html if needed
+  if (window.location.pathname === '/' && !window.location.pathname.includes('index.html')) {
+    window.location.href = window.location.origin + '/index.html';
+  }
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
   <script src="js/vanta-init.js"></script>
